@@ -4,11 +4,11 @@ DESCRIPTION=Samba talloc library
 EAPI=5
 HOMEPAGE=http://talloc.samba.org/
 IUSE=compat python python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
-KEYWORDS=~alpha ~amd64 arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~x64-macos ~sparc-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~x64-macos ~sparc-solaris
 LICENSE=GPL-3
 RDEPEND=python_single_target_python2_6? ( dev-lang/python:2.6[threads] ) python_single_target_python2_7? ( dev-lang/python:2.7[threads] ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] !!<sys-libs/talloc-2.0.5
 REQUIRED_USE=python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_6 python_single_target_python2_7 )
 SLOT=0
 SRC_URI=http://samba.org/ftp/talloc/talloc-2.0.8.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	waf-utils	681b3e9181d1a20ad8d0c186333ddcf7
-_md5_=c79cceb9dfa9573bdceed7a8bebf71e0
+_md5_=b42e23cef1df5a2dbbdc1a0641349f27
