@@ -4,10 +4,10 @@ DESCRIPTION=A simple database API
 EAPI=3
 HOMEPAGE=http://tdb.samba.org/
 IUSE=python
-KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
+KEYWORDS=~alpha amd64 arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
 LICENSE=GPL-3
 RDEPEND=python? ( =dev-lang/python-2* )
 SLOT=0
 SRC_URI=http://samba.org/ftp/tdb/tdb-1.2.11.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python	7aff825f110c83fa8c77f14ba3c71c47	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	waf-utils	681b3e9181d1a20ad8d0c186333ddcf7
-_md5_=1d96f3d650b1457aa7f7306aab32982c
+_md5_=0c98b7365464c05c2b29c2c733e0c0da
