@@ -3,10 +3,10 @@ DEPEND=>=sys-libs/talloc-2.0.6[python] virtual/pkgconfig dev-lang/python !dev-la
 DESCRIPTION=Samba tevent library
 EAPI=4
 HOMEPAGE=http://tevent.samba.org/
-KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=~alpha ~amd64 arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-3
 RDEPEND=>=sys-libs/talloc-2.0.6[python] =dev-lang/python-2*
 SLOT=0
 SRC_URI=http://samba.org/ftp/tevent/tevent-0.9.18.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python	7aff825f110c83fa8c77f14ba3c71c47	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	waf-utils	681b3e9181d1a20ad8d0c186333ddcf7
-_md5_=ea315a65ca08e8af7a027853fda28ce1
+_md5_=33d4e19e4cc8a9735b2d266731a73150
