@@ -4,14 +4,14 @@ Hash: SHA256
 DIST talloc-2.0.7.tar.gz 370705 SHA256 59e1e8619b44eb820405cf76ab15607c35ac6e3460377016eb43f81bca22768a SHA512 b4384653f570b349d13352b3a2304bc3bc58d4d3e6369b049163c43d3125bbe29a8d3679691be04ef26a51a2820345fddf3c882d23ce629f8044b2aa043e2768 WHIRLPOOL 9709a5e92f07efd4e40f5e49a2c8e5c12b916780b57ae81c59f2076f7a75c08ed112e4fdc7f0cb9aee3952e599d01e9f93b38d35e1875ee148e9863338a6331e
 DIST talloc-2.0.8.tar.gz 433489 SHA256 1ec11e635e0318dbbb014db38ff96e8dba3ce5f614eeb7d993b4a5b71c016783 SHA512 8e8e71d05443b7ea5d8ac432c1043840000b7b6ebeff6a2f621274f29a298e6c64ad5fb75b59c6138179c5602d6164695b85b57b5b310809150320b6eecd487f WHIRLPOOL 4cfaab8edbb7040ff0319ff7bce54657e3ecdfd27792b6ad0b5d789b38579116f69023def228e725d03a6c226ded768cfcdede920162930179704481160b9e81
 EBUILD talloc-2.0.7.ebuild 2052 SHA256 8a45dbac18a933debf1e98fa3276b388dac3c0a809bb03a9d31688981315ab0c SHA512 3c73a019c751b510b1b3d009559655d8db97ee3d924b63fb1b8275c08aacdfe897df6e4af859b2532fdac671e4d09f59053edb3a1844a4984867eb816a284e14 WHIRLPOOL 64c88658f0050db04dc5ea8c9f54bcabb983fecfe98253d4c2a9d0c22937ca880d8c3ec4c6cfbc34d9d3795534deb391cecf95fff9c4849f7b541063de3e4756
-EBUILD talloc-2.0.8-r1.ebuild 2007 SHA256 936888a13e7f7abdd75b5ca5489e172c184502f454a44c37d5bdf25189316d55 SHA512 35eee70cbd7994b8f63a50980302c4112cc6b751ef9712c0ee2989d01497f6af945c4589fc02a26023d77a5c3aad81fa301830058dfb774ac69f527533eb8f2b WHIRLPOOL 6f3fc0e65e600daeb9940c6244e71611924d592ca102cd69f7bb77114ee863f3d6ba92d51202254e90dedd67a34efb4dfb53f3c8c8011656d4f20849124f3e4f
-EBUILD talloc-2.0.8.ebuild 2070 SHA256 7514f378f1054d5734e326862c0b530f0773e5508b9d4519112d9597e87061a5 SHA512 b62eb0e5d0a993797353f0ba28e1991f64440a6aca8379e6268f7ab408061073843c480c603116b814d44303fcdfecbe769b4177642c0aa5027a81f7111bce92 WHIRLPOOL 8bc797c5bae5d435e8b5daec49939729deadbe370e678fe020167e03fcafefc948194ffade7a63bab1bf642c75eab16b7204986f5b609229b29a7b9921fadaab
-MISC ChangeLog 7162 SHA256 12c8b167592d5d59bfeafa553eccc7d39643f2a79de806f4fe13a2e94ebf7aec SHA512 f2dbabfcf8e267abc8704624147c8769a85cef2c5f688e42d0c9b49a091b1a2ccd929166776720fd753088bf3539d17eb67e93866288e307c016bfb7a4984f2d WHIRLPOOL 9778a70271ad4c62a303f5d5eae50ac587a0da289e70ab8820956f9daa6cc066d685560776ef2b7fdaa8800989e13dd9e2faf00736a96dc561b25d8cbc79e352
+EBUILD talloc-2.0.8-r1.ebuild 2008 SHA256 36055a03405c512ee0ca00dfac8eda8d6a68c10a92ee974f5533c1c49da95cd1 SHA512 ac9b3b668506f60a8a288bfeafb51ce89765fc92650194ebb2160055d0626473f3a067d598fed90546ff3493c96f83214caeb3e100f9f6fe22281b34e4e945a4 WHIRLPOOL 8e3c4230b373bcf54cab800d25da15acc93d70f00182302135be6184fcc3288f8a6672fc3da4cebcb91f7fe985e2f9d8812cd0901db5278617925f598faf2e01
+EBUILD talloc-2.0.8.ebuild 2072 SHA256 d14ff935b3cff69721efecd3cda5154da323bf4a08ccb5554beea4373e4961ae SHA512 6bb61888b2a458891959514ac486919b345c9db75d2fecfa8f0135f87d274d6f5f10aa271eda2e525c2899ce20bbe88f40f9ffc4fc18790cf7f490503f120556 WHIRLPOOL 7a39c01012c0d36031387d924d027e7a67e333edabcd773f8c61590a241a35c185303dc81fbe342b431f2e213c49ab4b0d211bd6c8f52c965da049ea84cc04c3
+MISC ChangeLog 7302 SHA256 3c758858f25bd74253a6e002597d450505d59ecac24954e605f66c34b3a8e191 SHA512 7cb8ad58887bacd2402fc630c375c98c94fd897a4ab0c06c6d4cbddf87f5812148ee4d90ca64c7e87a506cc032d576442f5884bfba14e3341063515b1f6df6c0 WHIRLPOOL e518b0ed8b545e75ce8e6543a6f1e51b8cef17bcd8b5c2eb0ddb57f021575d3c474663722e49804afcca3da1e0df8655d925ac8659c494e47ced122b68f41ec1
 MISC metadata.xml 341 SHA256 f12826bad0472c46c8bd1ee18e7ab0acdc4cf26dd8b1322b1a93ff7c95b14a7e SHA512 dd141022832b17bc47f40cc940c2165c849b5ad786df5cbba7685da4543a8969ed992fb9dda3a136d045418f6de731c83909f3d02fd3ad2dee4d0ab4689b0c44 WHIRLPOOL 1fff0d00542a6e5b3f64edb985e53fe978a9d91dde0b0118cf790dc113a1a3e3fd01632f2f19517af9b47fef51902de579e43c30eaedf3fa298230848cb125a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIaYx4ACgkQkKaRLQcq0GKRBQCfQy/KYlQWID9Sfs8Xx29iIku2
-DbQAoKL9WqLraMqwgbKIcM7OqMWjrFFp
-=DDwp
+iEYEAREIAAYFAlIaZBwACgkQkKaRLQcq0GK62QCfaxkc+WxZYX434LHr/7hpwOgs
+8+cAnAwINND31VhTHK73o/unXOdOaKpB
+=/hWl
 -----END PGP SIGNATURE-----
