@@ -8,14 +8,14 @@ DIST tevent-0.9.17.tar.gz 496964 SHA256 9155a85e83b6df38d251c292ca70950dd3f2ba32
 DIST tevent-0.9.18.tar.gz 505276 SHA256 5c636a0c55a7b59745bae0d8ae3900b5ea8c09bfff6001dcd95f1db9cd06ea4f SHA512 b95c3c28dd484741c6d5ab18b28f9ae144026876bccfa2345fdf75b5601f589f1e9cca392390dd0056e4a60271a22c9b7798db2c5d7a2f8c9cba5d258bd3e9af WHIRLPOOL 622c3a2eff72b038ae20b70107b881b8b4b700ece45c4d399601648974ce56a726ff23f47caef6aa4750bdf070ac29c9e964fa6655619b3177a00a4bcfb7d4d8
 DIST tevent-0.9.19.tar.gz 543195 SHA256 f9a1d079844ec0068804541ee2421d8ff34d7a4cdb93a6cc20d0edd5302e3fc9 SHA512 9c8eb11dc8efbf6b7651261bb4359c6100022145df749630c116ecafea62f6527c3cc7ab73499e3ff1854454aab3947c58d49a9765fc857ac0ddd90250299d0d WHIRLPOOL ebdda4d558a023531c7c991027442dd05f83936f9e8389ce83de06b9d60033dea0e36299c3ed808a9670d84bb3c43297d3d5a5d62670e69ede474ef0bec32581
 EBUILD tevent-0.9.17.ebuild 890 SHA256 390e42029d460465acd28056173b6e5d33a6bfdeae3d7bb4abf00a9f24de3d13 SHA512 88ced8b08969c77239887f6388656d8a8fa97251a0173596a4046ef53e5ee7ecd037fda606c12c74e03e99cf83f95519b15aa1cec395b2c197435db09c099eac WHIRLPOOL 02ed5638ebab0e14590d0c6d15887bbae273d1e1f954eab0af64e22f85efbc6b143c30ab7d3a8b758771a62a424d8438c466f5298e8598f20ab2e63d30ed5309
-EBUILD tevent-0.9.18.ebuild 895 SHA256 2295f01c9fb1b84944bc1a1ae5deadd4f96e4d7e969c7fe85d017d78c559f41a SHA512 1754694797f26b4c20f128b1d428d79193a2eaa10a7bf312533f4104258c6f7f29f91aa0ee792a3c8fa1a0f0d94f623508411fefda99e2106337f7be90ac6b13 WHIRLPOOL 09926b86af3258360c667e9b591bf608fdc9ead27b67af5f199c5501d53a142e083a5ad229589f5b495df898755207a769169b8fb14cd1421ae3e23bc98c51a6
-EBUILD tevent-0.9.19.ebuild 943 SHA256 8b733191d0f90585e810ec4e228ddc4d755bf8e4bf887ffb6f0b64534efd2388 SHA512 c7caeaf95c56d489338b3bbb09001647a774b898fb713e2b9efb7b12a2f3a00eed4d38be577d48e53ef40d8b0fbf300a96b8ad3668cd9c0a23331399d0c55fa3 WHIRLPOOL a1e7f2304e7462fa0d143b44070dd9c6191e83cb56020122a3bd54396faef08c24586a5871fdbb8307d6cadab0ce258ae842315f9cb7c4ac7a7b6b7454bc8294
-MISC ChangeLog 5744 SHA256 78d37c750e58f8c210c2a4a54ac14bb0a5c0d7d5b36c81234f2b5f275de65e7b SHA512 6246c46363f716324abc0f77a6eba7d6d946caa0ce2add4890d42617c35df079606aa6fe3d5e21d90e5860376ec124c7b9ee5c35be23141f6e134718e460f1ec WHIRLPOOL d55b78f06915fbe1f05a75ceed77c83f36c3db86e4e99b1c9d5270845517d89fd04c23f65f1311f0a5c2ae29a0b0fc8dcfc8b3c4844c6271ff2634e21f25ae91
+EBUILD tevent-0.9.18.ebuild 897 SHA256 fc3e648269b2ee3eaf8507240d1ba0c714a08c66ba8a176763d8d36ccc8c080c SHA512 75e555b5a8ba9eb694e77cfff756af83b2f8f5ead0d21572c0b545e6c300b0939c30ca340e2190fd1a3b0049d4ef703adf2fd121d4f7bcef9e23811aa5e32564 WHIRLPOOL 48236cb79a03453d053d6a5439f1769340f024e7fa153c52bf97a55ada1831d812b8143903ba618e5767cc61dc439ca95fc202aa398db42716c9a72359cef907
+EBUILD tevent-0.9.19.ebuild 944 SHA256 935fb0b556c13fa11f10308a5ac91f81cee839ab97cbd5047f306d04ffe95153 SHA512 d5b7b3a86bd465dce5b5e65861edd93bcef9e449e74860f882e5c2cab3e2f8aeba737c317246bc8c22403107504e9bad9bfb874a69fb7940bc5dcf62c63254fa WHIRLPOOL 01c90d31febde49e1eb9f171da1fe4e44ee43b9e72640a65d629ac0a574d23f353af0677d311ec6fb43ed210d8762e85b985314d2cd582eb9ad39b2a8ccc7120
+MISC ChangeLog 5883 SHA256 2cec5a0d8acb813d5d15469399a5b5575cf9616a3762a85e5ab00962bd0df751 SHA512 98f8db0426d20ac4fac4650b6796088eed4820037a2a5bc408f8bea0848eaa3dec3556a5bc7bd72d595e2372a6697fb60ef8e72a29a41ce08ecde920a40de767 WHIRLPOOL d1e8a4aabe81e06f825fff0372e7ca2463f31709ae01a29da7715fcb1aba004584dec3bdd21b283451af65520a49fc7f1390640234e4b10af5b907e65f87ce50
 MISC metadata.xml 253 SHA256 89737be021da6f1a76894bd234f227b72ba57fd0213bdfdc0f5b38f1051ce775 SHA512 58c5ed90694ec0914f49f21b7066d7bd5610f53bbd0ee01e6d1b285e5f8f261bcb681e19b21c39287c312fc982b300f2a34a8cc638eaa0e939dd0da2b046288a WHIRLPOOL 15e90e302adf797a5761d14558f652e319613ec179ea5a4cdfcff2040bcf8d0cc734266744a69e644108ec47bcdde213ad5eaf0c7adf9d796a21e62a58ed9dfe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIaYz4ACgkQkKaRLQcq0GLbmwCglp/hb9w1EZTwKTxvyB3XYkkW
-b8EAni1myFJFITug5RhXf767dz0Iu85k
-=GdEG
+iEYEAREIAAYFAlIaZIIACgkQkKaRLQcq0GKOSgCgkN5qJGAm0mSWsKIisc5OuCV5
+QB4An3S/KNkjFf3dvn78KU9EjOeZPrfu
+=9UDZ
 -----END PGP SIGNATURE-----
