@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/tevent
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/tevent/ChangeLog,v 1.43 2013/08/25 19:58:05 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/tevent/ChangeLog,v 1.44 2013/08/25 20:03:29 maekke Exp $
+
+  25 Aug 2013; Markus Meier <maekke@gentoo.org> tevent-0.9.18.ebuild,
+  tevent-0.9.19.ebuild:
+  stabilize correct version for bug #478260
 
   25 Aug 2013; Markus Meier <maekke@gentoo.org> tevent-0.9.19.ebuild:
   arm stable, bug #478260
